<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Iconify</string>
    <string name="app_moto">Customize Boring Android UI</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="step_number">Step %1$d/%2$d</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Iconify supports all Pixel and AOSP ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all Pixel and AOSP-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for iconify to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="compatible_root_not_found_desc">Use any popular root solutions to proceed.</string>
    <string name="root_not_found_title">Root Is Not Accessible</string>
    <string name="root_not_found_desc">Looks like your device is not rooted!</string>
    <string name="need_reboot_title">Need Device Reboot</string>
    <string name="need_reboot_desc">Reboot your device to put all files in place.</string>
    <string name="installation_failed_title">Oops Did Not Expect That</string>
    <string name="installation_failed_desc">Logs have been saved in documents folder.</string>
    <string name="logs">Logs</string>
    <string name="search_title">Search</string>
    <string name="searchpreference_search">Search…</string>
    <string name="searchpreference_clear">Clear</string>
    <string name="searchpreference_history_entry">History entry</string>
    <string name="searchpreference_more">More</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_result">No result</string>
    <string name="activity_title_home_page">Iconify</string>
    <string name="activity_title_icon_pack">Icon Pack</string>
    <string name="activity_desc_icon_pack">Change system icon pack</string>
    <string name="activity_title_cellular_icons">Cellular Icons</string>
    <string name="activity_desc_cellular_icons">Change system cellular icons</string>
    <string name="activity_title_wifi_icons">WiFi Icons</string>
    <string name="activity_desc_wifi_icons">Change system WiFi icons</string>
    <string name="activity_title_brightness_bar">Brightness Bar</string>
    <string name="activity_desc_brightness_bar">Customize progress slider</string>
    <string name="activity_title_qs_shape">QS Panel Tiles</string>
    <string name="activity_desc_qs_shape">Customize QS panel tiles</string>
    <string name="activity_title_notification">Notification</string>
    <string name="activity_desc_notification">Customize notification style</string>
    <string name="activity_title_progress_bar">Progress Bar</string>
    <string name="activity_desc_progress_bar">Use different progress style</string>
    <string name="activity_title_switch">Switch</string>
    <string name="activity_desc_switch">Customize switch appearance</string>
    <string name="activity_title_toast_frame">Toast Frame</string>
    <string name="activity_desc_toast_frame">Change toast notification style</string>
    <string name="activity_title_icon_shape">Icon Shape</string>
    <string name="activity_desc_icon_shape">Change system icon shapes</string>
    <string name="iconify_updated_title">Iconify Just Got Updated!</string>
    <string name="iconify_updated_desc">Reboot your phone to use the latest added features and options.</string>
    <string name="home_card_title">Design It Your Way</string>
    <string name="home_card_subtitle">Unleash Your Imagination, Make It Yours</string>
    <string name="home_card_hide">Hide</string>
    <string name="activity_title_color_engine">Color Engine</string>
    <string name="activity_desc_color_engine">Have control over colors</string>
    <string name="activity_title_ui_roundness">UI Roundness</string>
    <string name="activity_desc_ui_roundness">Change corner radius of interface</string>
    <string name="activity_title_qs_row_column">Row and Column</string>
    <string name="activity_desc_qs_row_column">Change Qs tile rows and columns</string>
    <string name="activity_title_qs_icon_label">Icon and Label</string>
    <string name="activity_desc_qs_icon_label">Change icon and label options</string>
    <string name="activity_title_qs_tile_size">QS Tile Size</string>
    <string name="activity_desc_qs_tile_size">Change height of QS panel tile</string>
    <string name="activity_title_qs_panel_margin">QS Panel Margin</string>
    <string name="activity_desc_qs_panel_margin">Modify quick settings margins</string>
    <string name="activity_title_statusbar">Statusbar</string>
    <string name="activity_desc_statusbar">Modify statusbar interface</string>
    <string name="activity_title_navigation_bar">Navigation Bar</string>
    <string name="activity_desc_navigation_bar">Tweak navigation options</string>
    <string name="activity_title_volume_panel">Volume Panel</string>
    <string name="activity_desc_volume_panel">Customize volume panel design</string>
    <string name="activity_title_media_player">Media Player</string>
    <string name="activity_desc_media_player">Change how media player looks</string>
    <string name="activity_title_miscellaneous">Miscellaneous</string>
    <string name="activity_desc_miscellaneous">Miscellaneous customization</string>
    <string name="activity_title_xposed_menu">Xposed Menu</string>
    <string name="activity_desc_xposed_menu">LSPosed required for these options</string>
    <string name="activity_title_extras">Extras</string>
    <string name="activity_desc_extras">Additional tweaks and options</string>
    <string name="activity_title_dual_statusbar">Dual Statusbar</string>
    <string name="settings_section_title_general">General</string>
    <string name="settings_app_language">Language</string>
    <string name="settings_app_icon">App Icon</string>
    <string name="settings_app_icon_default">Default Icon</string>
    <string name="settings_app_icon_themed">Themed Icon</string>
    <string name="settings_app_icon_retro">Retro Icon</string>
    <string name="settings_app_theme">App Theme</string>
    <string name="settings_app_theme_light">Light Theme</string>
    <string name="settings_app_theme_dark">Dark Theme</string>
    <string name="settings_app_theme_system">Follow System</string>
    <string name="settings_section_title_update">Update</string>
    <string name="settings_check_for_update">Check For Update</string>
    <string name="settings_current_version">Current version: %s</string>
    <string name="settings_auto_update_title">Auto Update</string>
    <string name="settings_auto_update_desc">Check for new versions in background.</string>
    <string name="settings_auto_update_title_wifi_only">Check Over WiFi Only</string>
    <string name="settings_auto_update_desc_wifi_only">Check for updates over wifi only.</string>
    <string name="settings_section_title_xposed">Xposed</string>
    <string name="settings_show_warning_title">Show Warning</string>
    <string name="settings_show_warning_desc">Show warning on how to re-optimize module in Xposed Menu.</string>
    <string name="settings_restart_systemui_behavior">Mod Applying Method</string>
    <string name="settings_auto_restart_systemui">Automatically restart SystemUI</string>
    <string name="settings_auto_force_reload_ui">Automatically force reload UI</string>
    <string name="settings_manual_restart_systemui">Notify for manual SystemUI restart</string>
    <string name="settings_systemui_restart_required">SystemUI restart required</string>
    <string name="settings_section_title_miscellaneous">Miscellaneous</string>
    <string name="settings_restart_systemui_after_boot_title">Restart SystemUI After Boot</string>
    <string name="settings_restart_systemui_after_boot_desc">Some options like blur intensity doesn\'t take effect until systemui is restarted</string>
    <string name="settings_show_home_page_card_title">Show Home Page Card</string>
    <string name="settings_show_home_page_card_desc">Show a beautiful card on the home page.</string>
    <string name="settings_vibrate_ui_card_title">Haptic Feedback</string>
    <string name="settings_vibrate_ui_page_card_desc">Enhance touch feedback with interactive haptics.</string>
    <string name="settings_slider_controller_title">Slider Controller</string>
    <string name="settings_slider_controller_desc">Enable to display plus and minus buttons with sliders.</string>
    <string name="settings_clear_app_cache_title">Clear App Cache</string>
    <string name="status_bar_logo_enable_title">Enable Logo</string>
    <string name="status_bar_logo_position_title">Logo Position</string>
    <string name="status_bar_logo_style_title">Logo Style</string>
    <string name="dsb_title">Dual Row Statusbar</string>
    <string name="dsb_portrait_only_title">Portrait Only</string>
    <string name="dsb_single_line_start_side_title">Single-Line Start Side</string>
    <string name="dsb_single_line_start_side_desc">Show one row on start side of statusbar</string>
    <string name="dsb_single_line_end_side_title">Single-Line End Side</string>
    <string name="dsb_single_line_end_side_desc">Show one row on end side of statusbar</string>
    <string name="dsb_statusbar_height_title">Statusbar Height</string>
    <string name="dsb_start_padding_title">Start Padding</string>
    <string name="dsb_end_padding_title">End Padding</string>
    <string name="dsb_top_padding_title">Top Padding</string>
    <string name="force_themed_icons_title">Force Themed Icons</string>
    <string name="force_themed_icons_desc">Generate monochromatic icons if not provided by the app</string>
    <string name="app_drawer_themed_icons_title">App Drawer Themed Icons</string>
    <string name="app_drawer_themed_icons_desc">Enable themed icons on app drawer</string>
    <string name="double_tap_to_sleep_title">Double Tap to Sleep</string>
    <string name="double_tap_to_sleep_desc">Double tap on home screen empty space to turn off the screen</string>
    <string name="desktop_icon_labels_title">Icon Labels on Desktop</string>
    <string name="app_drawer_icon_labels_title">Icon Labels in App Drawer</string>
    <string name="app_drawer_background_opacity_title">App Drawer Background Opacity</string>
    <string name="recents_background_opacity_title">Recents Background Opacity</string>
    <string name="launcher_mod_footer_info">Currently, only Pixel Launcher and Launcher3 are supported.</string>
</resources>