<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/com.drdisagree.iconify.ui.preferences.preferencesearch">

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_forcethemedicons"
        android:summary="@string/force_themed_icons_desc"
        android:title="@string/force_themed_icons_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_appdrawerthemedicons"
        android:summary="@string/app_drawer_themed_icons_desc"
        android:title="@string/app_drawer_themed_icons_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_doubletaptosleep"
        android:summary="@string/double_tap_to_sleep_desc"
        android:title="@string/double_tap_to_sleep_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:key="xposed_desktopiconlabels"
        android:title="@string/desktop_icon_labels_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:key="xposed_appdrawericonlabels"
        android:title="@string/app_drawer_icon_labels_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_disablerecentsblur"
        android:summary="@string/disable_recents_blur_desc"
        android:title="@string/disable_recents_blur_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:key="xposed_appdrawerbackgroundopacity"
        android:title="@string/app_drawer_background_opacity_title"
        app:defaultValue="100"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="0"
        app:tickInterval="1"
        app:valueFormat="%" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:key="xposed_recentsbackgroundopacity"
        android:title="@string/recents_background_opacity_title"
        app:defaultValue="100"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="0"
        app:tickInterval="1"
        app:valueFormat="%" />

    <com.drdisagree.iconify.ui.preferences.FooterPreference
        android:key="launcher_mod_footer_info"
        android:title="@string/launcher_mod_footer_info"
        search:ignore="true" />

</PreferenceScreen>