<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.iconify.ui.preferences.MasterSwitchPreference
        android:key="xposed_statusbarlogo"
        android:title="@string/status_bar_logo_enable_title" />

    <com.drdisagree.iconify.ui.preferences.ListPreference
        android:defaultValue="0"
        android:dependency="xposed_statusbarlogo"
        android:dialogTitle="@string/status_bar_logo_position_title"
        android:entries="@array/status_bar_logo_position_entries"
        android:entryValues="@array/status_bar_logo_position_values"
        android:key="xposed_statusbarlogoposition"
        android:title="@string/status_bar_logo_position_title"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <com.drdisagree.iconify.ui.preferences.BottomSheetListPreference
        android:defaultValue="0"
        android:dependency="xposed_statusbarlogo"
        android:entries="@array/status_bar_logo_style_entries"
        android:entryValues="@array/status_bar_logo_style_values"
        android:key="xposed_statusbarlogostyle"
        android:title="@string/status_bar_logo_style_title"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>